[gd_scene load_steps=18 format=3 uid="uid://dsfwj54677ibq"]

[ext_resource type="PackedScene" uid="uid://chc2s487yas8p" path="res://scenes/player.tscn" id="1_4dawf"]
[ext_resource type="PackedScene" uid="uid://fgo84w8xb34u" path="res://scenes/hud.tscn" id="1_20npq"]
[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_70e0l"]
[ext_resource type="Script" path="res://scripts/player.gd" id="2_jglvp"]
[ext_resource type="PackedScene" uid="uid://jaoooc650seb" path="res://scenes/platform.tscn" id="4_yj88r"]
[ext_resource type="PackedScene" uid="uid://c0b7wmqr4ihvd" path="res://scenes/coin.tscn" id="5_6o2qh"]
[ext_resource type="PackedScene" uid="uid://8da4nh16cstd" path="res://scenes/tile_map.tscn" id="5_wfkky"]
[ext_resource type="PackedScene" uid="uid://2egvgjsvepcv" path="res://scenes/killzone.tscn" id="6_6t2k8"]
[ext_resource type="PackedScene" uid="uid://dmdtl8r7x51kj" path="res://scenes/fakeblock.tscn" id="7_rx4g1"]
[ext_resource type="PackedScene" uid="uid://gowa10tdwth8" path="res://scenes/slime.tscn" id="8_nfs41"]
[ext_resource type="FontFile" uid="uid://c3mht6fd62y1x" path="res://assets/fonts/PixelOperator8.ttf" id="9_3ubrr"]
[ext_resource type="FontFile" uid="uid://cilhpod8jx56t" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="11_koyog"]
[ext_resource type="PackedScene" uid="uid://cr2aiywas3g13" path="res://scenes/finish.tscn" id="13_cjwll"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ushfi"]
size = Vector2(2144, 20)

[sub_resource type="Animation" id="Animation_r6o5h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(76, -90)]
}

[sub_resource type="Animation" id="Animation_on2uf"]
resource_name = "move"
length = 2.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(76, -90), Vector2(-5, -90)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mwk8n"]
_data = {
"RESET": SubResource("Animation_r6o5h"),
"move": SubResource("Animation_on2uf")
}

[node name="Game" type="Node2D"]

[node name="HUD" parent="." instance=ExtResource("1_20npq")]
unique_name_in_owner = true

[node name="GameManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_70e0l")

[node name="Player" parent="." instance=ExtResource("1_4dawf")]
z_index = 5
position = Vector2(-149, -19)
script = ExtResource("2_jglvp")

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(-1, -4)
zoom = Vector2(4, 4)
limit_bottom = 90
limit_smoothed = true

[node name="TileMap" parent="." instance=ExtResource("5_wfkky")]

[node name="Killzone" parent="." instance=ExtResource("6_6t2k8")]
position = Vector2(104, 12)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Killzone"]
position = Vector2(-329, 99)
shape = SubResource("RectangleShape2D_ushfi")

[node name="Coins" type="Node" parent="."]

[node name="Coin" parent="Coins" instance=ExtResource("5_6o2qh")]
position = Vector2(-67, -33)

[node name="Coin2" parent="Coins" instance=ExtResource("5_6o2qh")]
position = Vector2(64, -105)

[node name="Coin3" parent="Coins" instance=ExtResource("5_6o2qh")]
position = Vector2(170, -82)

[node name="Coin4" parent="Coins" instance=ExtResource("5_6o2qh")]
position = Vector2(339, -62)

[node name="Coin5" parent="Coins" instance=ExtResource("5_6o2qh")]
position = Vector2(143, -15)

[node name="Coin6" parent="Coins" instance=ExtResource("5_6o2qh")]
position = Vector2(39, -106)

[node name="Coin7" parent="Coins" instance=ExtResource("5_6o2qh")]
position = Vector2(15, -106)

[node name="Platforms" type="Node" parent="."]

[node name="Platform" parent="Platforms" instance=ExtResource("4_yj88r")]
position = Vector2(406, -35)

[node name="Platform2" parent="Platforms" instance=ExtResource("4_yj88r")]
position = Vector2(76, -90)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Platforms/Platform2"]
libraries = {
"": SubResource("AnimationLibrary_mwk8n")
}
autoplay = "move"

[node name="Fakeblocks" type="Node" parent="."]

[node name="Fakeblock" parent="Fakeblocks" instance=ExtResource("7_rx4g1")]
position = Vector2(-301, -120)

[node name="Fakeblock2" parent="Fakeblocks" instance=ExtResource("7_rx4g1")]
position = Vector2(-285, -120)

[node name="Slime" parent="." instance=ExtResource("8_nfs41")]
position = Vector2(227, -8)

[node name="Labels" type="Node" parent="."]

[node name="Label" type="Label" parent="Labels"]
offset_left = -279.0
offset_top = -24.0
offset_right = -191.0
offset_bottom = -1.0
theme_override_fonts/font = ExtResource("9_3ubrr")
theme_override_font_sizes/font_size = 8
text = "Space to jump"

[node name="Label4" type="Label" parent="Labels"]
offset_left = -650.0
offset_top = -40.0
offset_right = -562.0
offset_bottom = -17.0
theme_override_fonts/font = ExtResource("9_3ubrr")
theme_override_font_sizes/font_size = 8
text = "You made it!"

[node name="Label2" type="Label" parent="Labels"]
offset_left = -279.0
offset_top = -149.0
offset_right = -191.0
offset_bottom = -126.0
theme_override_fonts/font = ExtResource("9_3ubrr")
theme_override_font_sizes/font_size = 8
text = "Almost there!"

[node name="Label3" type="Label" parent="Labels"]
offset_left = 418.0
offset_top = -58.0
offset_right = 506.0
offset_bottom = -35.0
theme_override_fonts/font = ExtResource("9_3ubrr")
theme_override_font_sizes/font_size = 8
text = "Jump!"

[node name="ScoreLabel" type="Label" parent="Labels"]
unique_name_in_owner = true
offset_left = -834.0
offset_top = -51.0
offset_right = -730.0
offset_bottom = -28.0
theme_override_fonts/font = ExtResource("11_koyog")
theme_override_font_sizes/font_size = 8
text = "You haven't collected all coins!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="TimeLabel" type="Label" parent="Labels"]
unique_name_in_owner = true
offset_left = -984.0
offset_top = -48.0
offset_right = -847.0
offset_bottom = -25.0
theme_override_fonts/font = ExtResource("11_koyog")
theme_override_font_sizes/font_size = 8
text = "Your fastest time is 00:00:00"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Finish" parent="." instance=ExtResource("13_cjwll")]
position = Vector2(-614, -36)

[connection signal="ready" from="." to="HUD" method="_on_game_ready"]
[connection signal="ready" from="GameManager" to="GameManager" method="_on_ready"]
